@@ -1,4 +1,5 @@
 encoding=UTF-8
+pam.time.to.live.in.seconds=1209600
 #-------------------
 # parallel transfer thread pooling behavior - work-in-progress
 #-------------------
