@@ -19,12 +19,13 @@ public class PamAuthRequestInpTest {
 	@Test
 	public final void testValidTag() throws Exception {
 		PamAuthRequestInp request = PamAuthRequestInp.instance("user",
-				"password");
+				"password", 100);
 		String tagVal = request.getParsedTags();
 
 		StringBuilder sb = new StringBuilder();
 		sb.append("<pamAuthRequestInp_PI><pamUser>user</pamUser>\n");
 		sb.append("<pamPassword>password</pamPassword>\n");
+		sb.append("<timeToLive>100</timeToLive>\n");
 		sb.append("</pamAuthRequestInp_PI>\n");
 
 		Assert.assertEquals("did not get correct tag format", sb.toString(),
@@ -33,22 +34,22 @@ public class PamAuthRequestInpTest {
 
 	@Test(expected = IllegalArgumentException.class)
 	public final void testUserNull() throws Exception {
-		PamAuthRequestInp.instance(null, "password");
+		PamAuthRequestInp.instance(null, "password", 10);
 	}
 
 	@Test(expected = IllegalArgumentException.class)
 	public final void testUserBlankl() throws Exception {
-		PamAuthRequestInp.instance("", "password");
+		PamAuthRequestInp.instance("", "password", 10);
 	}
 
 	@Test(expected = IllegalArgumentException.class)
 	public final void testPasswordNull() throws Exception {
-		PamAuthRequestInp.instance("user", null);
+		PamAuthRequestInp.instance("user", null, 10);
 	}
 
 	@Test(expected = IllegalArgumentException.class)
 	public final void testPasswordBlankl() throws Exception {
-		PamAuthRequestInp.instance("user", "");
+		PamAuthRequestInp.instance("user", "", 10);
 	}
 
 }
