@@ -47,6 +47,10 @@ Note that the following bug and feature requests are logged in GForge with relat
 *[#1628] intermittent -528036 errors on delete of collections
 **Added overhead for iRODS bug with intermittent deletes of collections in unit test running (added overhead to IRODSTestSetupUtilities)
 
+*[#1635] ttl parameter in PAM missing
+**Added TTL to pam packing instruction, and added to the jargon.properties as pam.time.to.live.in.seconds=1209600 as a default
+
+
 
 ==Features==
 
